--- a/templates/index.html
+++ b/templates/index.html
@@ -1,67 +1,85 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-    <title>Switchboard</title>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
-    <script type="text/javascript" charset="utf-8">
-        $(document).ready(function() {
-            namespace = '/log';
-            // Connect to the Socket.IO server.
-            // The connection URL has the following format:
-            //     http[s]://<domain>:<port>[/<namespace>]
-            var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
+{% extends 'base.html' %}
 
-            // Event handler for new connections.
-            socket.on('connect', function() {
-             $('#status').html("Socket.IO status: connected");
-            });
+{% block title %}Switchboard{% endblock %}
 
-            socket.on('disconnect', function() {
-             $('#status').html("Socket.IO status: not connected");
-            });
+{% block content %}
+  {% for source, nodes in data.items() %}
+  <div>
+      <h2>Source {{source}}:</h2>
+      <table class="table">
+      {% for node_id, sensors in nodes.items() %}
+      <tr>
+      <th scope="col">{{node_id}}</th>
+      <th scope="col">value</th>
+      <th scope="col">hits</th>
+      <th scope="col">interval</th>
+      {% for sensor_id, sensor_data in sensors.items() %}
+      <tr>
+      <td><div>{{sensor_id}}</div></td>
+      <td><div id="{{node_id}}_{{sensor_id}}_value"></div></td>
+      <td><div id="{{node_id}}_{{sensor_id}}_hits_total"></div></td>
+      <td><div id="{{node_id}}_{{sensor_id}}_interval_seconds"></div></td>
+      </tr>
+      {% endfor %}
+      {% endfor %}
+      </table>
+    {% endfor %}
+  </div>
+{% endblock %}
 
-            // Event handler for server sent event data.
-            socket.on('event', function(msg) {
-                obj = JSON.parse(msg);
+{% block script %}
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+<script type="text/javascript" charset="utf-8">
+    $(document).ready(function() {
+        namespace = '/events';
+        // Connect to the Socket.IO server.
+        // The connection URL has the following format:
+        //     http[s]://<domain>:<port>[/<namespace>]
+        var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
 
-                for (node_id in obj) {
-                    for (sensor_id in obj[node_id]) {
-                        for (metric in obj[node_id][sensor_id]) {
-                            id = "#" + node_id + "_" + sensor_id + "_" + metric
-                            value = obj[node_id][sensor_id][metric]
-                            $(id).html(""+value);
+        // Event handler for new connections.
+        socket.on('connect', function() {
+         $('#status').html("connected");
+        });
+
+        socket.on('disconnect', function() {
+         $('#status').html("not connected");
+        });
+
+        // Event handler for server sent event data.
+        socket.on('event', function(msg) {
+            obj = JSON.parse(msg);
+
+            for (node_id in obj) {
+                for (sensor_id in obj[node_id]) {
+                    for (metric in obj[node_id][sensor_id]) {
+                        id = "#" + node_id + "_" + sensor_id + "_" + metric
+                        value = obj[node_id][sensor_id][metric]
+                        switch (typeof value) {
+                            case "number":
+                                if (metric == "interval_seconds") {
+                                    value = Math.round(value*10)/10
+                                    $(id).html(value.toString() + "s");
+                                } else {
+                                    value = Math.round(value*100)/100
+                                    $(id).html(value.toString());
+                                }
+                                break;
+                            case "string":
+                                $(id).html(value);
+                                break;
+                            case "boolean":
+                                value ? $(id).html("ON") : $(id).html("OFF");
+                                break;
+                            default:
+                                $(id).html("");
+                                break;
 
                         }
                     }
                 }
-                t=new Date().toLocaleString();
-                $('#log').append('<br>' + $('<div/>').text(t + " " + msg).html());
-            });
+            }
         });
-    </script>
-</head>
-<body>
-    <h1>Switchboard</h1>
-    <div id="status"></div>
-
-    {% for source, nodes in data.items() %}
-    <div>
-        <h2>Source {{source}}:</h2>
-        {% for node_id, sensors in nodes.items() %}
-        <table>
-        <tr><th colspan=2>{{node_id}}</th></tr>
-        {% for sensor_id, sensor_data in sensors.items() %}
-        <tr>
-        <td><div>{{sensor_id}} = </div></td>
-        <td><div id="{{node_id}}_{{sensor_id}}_value">{{sensor_data.value}}</div></td>
-        </tr>
-        {% endfor %}
-        </table>
-        {% endfor %}
-    {% endfor %}
-    </div>
-    <h2>Event log:</h2>
-    <div id="log"></div>
-</body>
-</html>
+    });
+</script>
+{% endblock %}
