fix navbar in html

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <a class="navbar-brand mb-0 h1" href="#">Switchboard</a>
-                {{ render_nav_item('metrics', 'Metrics', use_li=True) }}
+                {{ render_nav_item('table', 'Sensors', use_li=True) }}
                 {{ render_nav_item('log', 'Log', use_li=True) }}
                 {{ render_nav_item('doc', 'Documentation', use_li=True) }}
             </ul>
