--- a/templates/doc.html
+++ b/templates/doc.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Switchboard{% endblock %}
+{% block title %}documentation{% endblock %}
 
 {% block content %}
 <h2>REST API:</h2>
