--- a/templates/log.html
+++ b/templates/log.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Switchboard{% endblock %}
+{% block title %}event log{% endblock %}
 
 {% block content %}
   <h2>Event log:</h2>
