--- a/templates/log.html
+++ b/templates/log.html
@@ -3,6 +3,7 @@
 {% block title %}event log{% endblock %}
 
 {% block content %}
+<div style="padding-top: 3rem">
 <table class="table">
     <thead>
         <tr class="bg-light">
@@ -14,6 +15,7 @@
     <tbody id="log">
     </tbody>
 </table>
+</div>
 {% endblock %}
 
 {% block script %}
