--- a/switchboard/templates/log.html
+++ b/switchboard/templates/log.html
@@ -16,38 +16,13 @@
     </tbody>
 </table>
 </div>
+
+<script type="text/javascript" charset="utf-8">
+    time_locale = "{{ time_locale }}";
+</script>
 {% endblock %}
 
 {% block script %}
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
-<script type="text/javascript" charset="utf-8">
-    var msg_id = 0;
-
-     $(document).ready(function() {
-        namespace = '/events';
-        // Connect to the Socket.IO server.
-        // The connection URL has the following format:
-        //     http[s]://<domain>:<port>[/<namespace>]
-        var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
-
-        // Event handler for new connections.
-        socket.on('connect', function() {
-         $('#status').html("connected");
-        });
-
-        socket.on('disconnect', function() {
-         $('#status').html("not connected");
-        });
-
-        // Event handler for server sent event data.
-        socket.on('event', function(msg) {
-            if (msg_id >0) {
-                var t = new Date().toLocaleTimeString({% if time_locale is defined %}'{{ time_locale }}'{% endif %});
-                var row = '<tr><td>' + msg_id + "</td><td>" + t + '</td><td>' + msg + '</td></tr>';
-                $('#log').prepend(row);
-            }
-            msg_id += 1;
-        });
-    });
-</script>
+<script type="text/javascript" charset="utf-8" src="{{ url_for('static', filename='js/log.js') }}"> </script>
 {% endblock %}
