rename project: from Switchboard to Laporte

--- a/laporte/templates/base.html
+++ b/laporte/templates/base.html
@@ -1,5 +1,5 @@
 {% from 'bootstrap/nav.html' import render_nav_item -%}
-{% set appname = 'Switchboard' -%}
+{% set appname = 'Laporte' -%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
