--- a/laporte/templates/base.html
+++ b/laporte/templates/base.html
@@ -19,6 +19,7 @@
             <ul class="navbar-nav mr-auto">
                 <a class="navbar-brand mb-0 h1" href="#">{{ appname }}</a>
                 {{ render_nav_item('table', 'Sensors', use_li=True) }}
+                {{ render_nav_item('scheduler', 'Scheduler', use_li=True) }}
                 {{ render_nav_item('log', 'Log', use_li=True) }}
                 {{ render_nav_item('prom', 'Metrics', use_li=True) }}
                 {{ render_nav_item('doc', 'API', use_li=True) }}
