--- a/conf/test.yml.j2
+++ b/conf/test.yml.j2
@@ -48,7 +48,8 @@ test:
                 eval_require:
                     c: [ success_state, value ]
                     d: [ run_state, value ]
-                default_value: 0
+                default:
+                    value: 0
                 eval_expr: |
                     a = True if value == 2 or value == 3 else False
                     b = True if value == 1 or value == 3 else False
@@ -57,7 +58,8 @@ test:
                     c2 * 2 + d2
             result_ratio:
                 type: gauge
-                default_value: 0
+                default:
+                    value: 0
                 export:
                     hidden: false
                 eval_require:
@@ -71,7 +73,8 @@ test:
         sensors:
             result_total:
                 type: counter
-                default_value: 0
+                default:
+                    value: 0
                 eval_require:
                     {%- for i in range(1,6) %}
 
@@ -87,7 +90,8 @@ test:
         sensors:
             result_total:
                 type: counter
-                default_value: 0
+                default:
+                    value: 0
                 debounce:
                     hits: 4                
                 eval_require:
@@ -107,7 +111,8 @@ test:
 
             result{{ i }}_total:
                 type: counter
-                default_value: 0
+                default:
+                    value: 0
                 export:
                     hidden: true
                 eval_require:
@@ -118,7 +123,8 @@ test:
 
             result_total:
                 type: counter
-                default_value: 0
+                default:
+                    value: 0
                 eval_require:
                     {%- for i in range(1,6) %}
 
@@ -136,7 +142,8 @@ test:
 
             result{{ i }}_total:
                 type: counter
-                default_value: 0
+                default:
+                    value: 0
                 export:
                     hidden: true                
                 debounce:
@@ -150,7 +157,8 @@ test:
 
             result_total:
                 type: counter
-                default_value: 0
+                default:
+                    value: 0
                 eval_require:
                     {%- for i in range(1,6) %}
 
@@ -170,7 +178,8 @@ test:
                     hidden: true                    
             result_total:
                 type: gauge
-                default_value: 0
+                default:
+                    value: 0
                 debounce:
                     time: 0.1
                 eval_require:
